Fixed the scrollbar problem

--- a/src/components/MainBody.css
+++ b/src/components/MainBody.css
@@ -53,6 +53,7 @@
 .DropdownScrollBar{
     height: 60vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .SubAreas {
@@ -101,8 +102,10 @@
 .DataColumnInstitutions{
     height: 52vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 .dataColumnAuthors{
     height: 70vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
